@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

class MaintenanceRecordController <<RestController>> {
    + getAverageTurnaroundTime(): ResponseEntity
}

class MaintenanceQueryService <<Service>> {
    + getAverageTurnaroundTime(): List
}

interface MaintenanceRecordRepository <<Repository>> {
    + getAverageTurnaroundTimePerModel(): List<Map>
}

MaintenanceRecordController "1" --> "1" MaintenanceQueryService : uses >
MaintenanceQueryService "1" --> "1" MaintenanceRecordRepository : computes >
@enduml